RESOLVED FIXED132918
JSDOMWindow should not claim HasImpureGetOwnPropertySlot
https://bugs.webkit.org/show_bug.cgi?id=132918
Summary JSDOMWindow should not claim HasImpureGetOwnPropertySlot
Mark Hahnenberg
Reported 2014-05-14 11:51:54 PDT
We now correctly handle the impurity of JSDOMWindow's custom getOwnPropertySlot without needing the blanket HasImpureGetOwnPropertySlot. Getting rid of this flag will allow us to cache many properties/methods on both the JSDOMWindow and its prototype, which are very commonly used across the web.
Attachments
Patch (10.33 KB, patch)
2014-05-15 15:30 PDT, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2014-05-15 15:30:08 PDT
Geoffrey Garen
Comment 2 2014-05-15 15:49:53 PDT
Comment on attachment 231536 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=231536&action=review r=me > Source/WebCore/ChangeLog:12 > + We now correctly handle the impurity of JSDOMWindow's custom getOwnPropertySlot without needing the > + blanket HasImpureGetOwnPropertySlot. Getting rid of this flag will allow us to cache many Should specify that we do this through explicit watchpoint.
Mark Hahnenberg
Comment 3 2014-05-15 16:03:38 PDT
Mark Hahnenberg
Comment 4 2014-05-15 16:04:21 PDT
Comment on attachment 231536 [details] Patch Clearing review flag.
Note You need to log in before you can comment on or make changes to this bug.